# filter2D

./: .gitignore  README.md
cpp/: CMakeLists.txt  blur.cpp
cpp/filter2D/: Filter2D.cpp  Filter2D.h
